Use jdk.internal.misc.Unsafe.allocateUninitializedArray for CodedInputStream is available.